# submodule_test_parent

./: .gitmodules  NOTE.md  README.md  chirashi.code-workspace  pyproject.toml  sync-public.sh
.claude/: settings.json
src/chirashi/: __init__.py  base_api_endpoint.py  constants.py  exceptions.py
src/chirashi/_files/browse_series/: 2026-07-06T10_02_36.000.json  2026-07-06T10_02_44.165.json
src/chirashi/_files/episodes/: 2026-07-06T10_02_39.552.json  2026-07-06T10_02_45.951.json
src/chirashi/_files/search/: 2026-07-06T10_02_40.641.json
src/chirashi/_files/search_episode/: 2026-07-06T10_02_42.919.json
src/chirashi/_files/search_music/: 2026-07-06T10_02_41.974.json
src/chirashi/_files/search_series/: 2026-07-06T10_02_41.399.json
src/chirashi/_files/search_top_results/: 2026-07-06T10_02_43.572.json
src/chirashi/_files/seasons/: 2026-07-06T10_02_39.105.json  2026-07-06T10_02_45.451.json
src/chirashi/_files/series/: 2026-07-06T10_02_38.714.json
src/chirashi/_tools/: rebuild_models.py  remove_redundant_files.py
src/chirashi/browse_series/: __init__.py  models.json  models.py
src/chirashi/episodes/: __init__.py  models.json  models.py
src/chirashi/search/: __init__.py  models.json  models.py
src/chirashi/search/episodes/: __init__.py  models.json  models.py
src/chirashi/search/music/: __init__.py  models.json  models.py
src/chirashi/search/series/: __init__.py  models.py
src/chirashi/seasons/: __init__.py  models.json  models.py
src/chirashi/series/: __init__.py  models.json  models.py
tests/: test_chirashi.py
(+5 files in other folders)
